--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 thousand_island-*.tar
 
+# Ignore dialyzer caches
+/priv/plts/
