--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        elixir: [1.9.4, 1.10.4, 1.11.2]
+        elixir: [1.9.4, 1.10.4, 1.11.2, master]
         otp: [21.3.8, 22.3.4, 23.1.4]
 
     steps:
