--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -15,9 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         elixir: [1.9.4, 1.10.4, 1.11.4, master]
-        otp: [21.3.8, 22.3.4, 23.3.1]
+        otp: [22.3.4, 23.3.1, 24.0.2]
 
     steps:
     - uses: actions/checkout@v2
@@ -48,9 +49,6 @@ jobs:
     - name: Run Credo
       run: mix credo --strict
 
-    - name: Run Tests
-      run: mix test
-
     - name: Retrieve PLT Cache
       uses: actions/cache@v1
       id: plt-cache
@@ -66,4 +64,7 @@ jobs:
 
     - name: Run dialyzer
       run: mix dialyzer --no-check
+
+    - name: Run Tests
+      run: mix test
 
