--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,10 +1,6 @@
 name: Elixir CI
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 env:
   MIX_ENV: test
@@ -88,4 +84,3 @@ jobs:
 
     - name: Run Tests
       run: mix test
-
